--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
-.App {
-  text-align: center;
+h1{
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.listdiv {
+    text-align: center;
+    width:20%;
+    margin:auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+p{
+    text-decoration: line-through;
+    text-decoration-color: transparent;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+p:hover{
+    text-decoration-color:darkgray;
+    color:darkgray;
+    transition: all 0.25s;
+    cursor:pointer;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.strike{
+    text-decoration: line-through;
+    color:darkgray;
+    text-decoration-color: darkgray;
+    transition: all 0.25s;
 }
